crates/mys-upgrade-compatibility-transactional-tests/tests/snapshots/tests__friend_function_change.snap
---
source: crates/mys-upgrade-compatibility-transactional-tests/tests/tests.rs
expression: results
---
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: false, disallowed_new_abilities: [Copy, Drop, Store, Key, ] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: true, disallowed_new_abilities: [] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: true, disallowed_new_abilities: [Key, ] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: false, check_private_entry_linking: false, disallowed_new_abilities: [] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
========
Equal
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: false
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: false
	upgrade->base: false
====
====
Subset
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: false
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: false
	upgrade->base: false
====
